[package]
name = "ifaddrs"
version = "0.1.0"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
homepage = "https://maidsafe.net"
license = "GPL-3.0"

[dependencies]
libc = "~0.2.28"
c_linked_list = "~1.1.0"

[target.'cfg(target_os = "android")'.dependencies.ifaddrs-sys]
version = "0.1.0"
path = "ifaddrs-sys"

[dev-dependencies]
unwrap = "~1.1.0"